@@ -1,6 +1,6 @@
 {
     "displayName": "Close Support",
-    "fluxCapacitors": 0,
+    "fluxCapacitors": 2,
     "fluxVents": 7,
     "hullId": "brawler_LG",
     "hullMods": [
